tests/baselines/reference/parserMemberVariableDeclaration1.errors.txt
tests/cases/conformance/parser/ecmascript5/MemberVariableDeclarations/parserMemberVariableDeclaration1.ts(2,10): error TS1028: Accessibility modifier already seen.


==== tests/cases/conformance/parser/ecmascript5/MemberVariableDeclarations/parserMemberVariableDeclaration1.ts (1 errors) ====
    class C {
      public public Foo;
             ~~~~~~
!!! error TS1028: Accessibility modifier already seen.
    }